Enable hollow or super thin shards feature (#4770)
Enables the setting by default to true. Also, adapts the
stateless abstract IT to randomly disable it, or randomly
place zero TTL times. Adjusts existing tests that were
already toggling hollow settings appropriately.

Adapt hollow-related INFO level logs so we only have 
the following cases:

* When a node starts, prints if hollowing enabled and 
 TTL values
* When an IndexEngine produces a hollow commit
* When we unhollow
* Appended to the short description of a CC (e.g., 
 printed when we log the bootstrapping of a commit)

Closes ES-11519
Closes ES-13333